fix: handle overflow
Overflowing table will not hide the input.

--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -14,6 +14,7 @@ body {
   height: 100vh;
   width: 100vw;
   margin: 0;
+  overflow: hidden;
 }
 
 .editor {
@@ -33,6 +34,7 @@ body {
 
 .editor-output {
   grid-area: output;
+  overflow: auto;
 }
 
 .tag {
@@ -55,15 +57,18 @@ body {
   flex-grow: 1;
 }
 
-table, th, td {
-    border: 1px solid black;
+table,
+th,
+td {
+  border: 1px solid black;
 }
 
 table {
-    border-collapse: collapse;
+  border-collapse: collapse;
 }
 
-.editor-output th, td {
-    padding: 0.5em;
-    text-align: left;
+.editor-output th,
+td {
+  padding: 0.5em;
+  text-align: left;
 }
